// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectTag: Component should render correctly 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit Tag List"
        id="projectTag.subTitle"
        values={Object {}}
      />
    }
    headerTitle=""
    options={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit Tag List"
        id="projectTag.subTitle"
        values={Object {}}
      />
    }
    title=""
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.form
      onSubmit={[Function]}
    >
      <ProjectTagForm
        dirty={false}
        fetchTag={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "tagId": "1",
                },
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Promise {},
              },
            ],
          }
        }
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "goBack": [Function],
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isSubmitting={false}
        isValid={true}
        match={
          Object {
            "params": Object {
              "tagId": "1",
            },
          }
        }
        removeTag={[Function]}
        setFieldValue={[Function]}
        tag={
          Object {
            "id": 2,
            "name": "name",
            "project": Object {
              "description": "project description",
              "domain": "http://project.domain",
              "id": 1,
              "owner": "project owner",
              "status": "project status",
              "title": "project title",
            },
            "tags": Array [
              Object {
                "id": 1,
                "value": "value",
              },
            ],
          }
        }
        updateTag={[Function]}
        userRole="admin"
        values={
          Object {
            "name": "name",
            "tags": Array [
              Object {
                "id": 1,
                "value": "value",
              },
            ],
          }
        }
      />
      <Styled(Span)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Remove list"
          id="projectTag.subTitle"
          values={Object {}}
        />
      </Styled(Span)>
      <NavigationContainer
        contentStyles={null}
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackButton
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Back"
            id="projectTag.back"
            values={Object {}}
          />
        </BackButton>
        <NextButton
          disabled={true}
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="projectTag.saveTag"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </styled.form>
  </LoadingWrapper>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove this tag?"
        id="projectTag.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="projectTag.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="projectTag.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;

exports[`ProjectTag: Component should render correctly with loader 1`] = `
<styled.div>
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Edit Tag List"
        id="projectTag.subTitle"
        values={Object {}}
      />
    }
    headerTitle=""
    options={Array []}
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Edit Tag List"
        id="projectTag.subTitle"
        values={Object {}}
      />
    }
    title=""
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.form
      onSubmit={[Function]}
    >
      <ProjectTagForm
        dirty={false}
        fetchTag={[Function]}
        handleChange={[Function]}
        handleSubmit={[Function]}
        history={
          Object {
            "goBack": [Function],
            "push": [Function],
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        isSubmitting={false}
        isValid={true}
        match={
          Object {
            "params": Object {
              "tagId": "1",
            },
          }
        }
        removeTag={[Function]}
        setFieldValue={[Function]}
        tag={
          Object {
            "id": 2,
            "name": "name",
            "project": Object {
              "description": "project description",
              "domain": "http://project.domain",
              "id": 1,
              "owner": "project owner",
              "status": "project status",
              "title": "project title",
            },
            "tags": Array [
              Object {
                "id": 1,
                "value": "value",
              },
            ],
          }
        }
        updateTag={[Function]}
        userRole="admin"
        values={
          Object {
            "name": "name",
            "tags": Array [
              Object {
                "id": 1,
                "value": "value",
              },
            ],
          }
        }
      />
      <Styled(Span)
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Remove list"
          id="projectTag.subTitle"
          values={Object {}}
        />
      </Styled(Span)>
      <NavigationContainer
        contentStyles={null}
        fixed={true}
        hideOnDesktop={false}
        right={false}
      >
        <BackButton
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <FormattedMessage
            defaultMessage="Back"
            id="projectTag.back"
            values={Object {}}
          />
        </BackButton>
        <NextButton
          disabled={true}
          loading={false}
          type="submit"
        >
          <FormattedMessage
            defaultMessage="Save"
            id="projectTag.saveTag"
            values={Object {}}
          />
        </NextButton>
      </NavigationContainer>
    </styled.form>
  </LoadingWrapper>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove this tag?"
        id="projectTag.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="projectTag.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        disabled={false}
        id="confirmRemovalBtn"
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="projectTag.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;
